<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaPlayer</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="song_title"> Song Title </string>

    <string name="play"> play </string>
    <string name="sound"> sound </string>
    <string name="previous"> previous </string>
    <string name="next"> next </string>
</resources>
